Add '26.2-snapshot-4' sources